--- a/src/styles/ForecastSummaries.css
+++ b/src/styles/ForecastSummaries.css
@@ -1,5 +1,8 @@
 .forecast-summaries {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-evenly; */
   flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
 }
