improve style spacing

--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -4,6 +4,7 @@
   border: 1px solid rgb(210, 210, 210);
   margin-top: 1rem;
   background-color: rgb(247, 253, 255);
+  min-width: 14rem;
 }
 
 .forecast-summary__icon {
