--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -17,16 +17,17 @@ body {
 }
 
 .search-form {
-  width: 100%;
+  width: 95%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: auto;
 }
 
 #searchQueryInput {
   width: 100%;
   height: 2.8rem;
-  background: #f5f5f5;
+  background: #f7f7f7;
   outline: none;
   border: none;
   border-radius: 1.625rem;
