--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -66,10 +66,10 @@
 }
 
 button {
-  border-radius: 5px;
-  background-color: #bebebe; /* Green */
+  border-radius: 9px;
+  background-color: #76dbff;
   border: none;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 10px;
   text-align: center;
   text-decoration: none;
