--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@200&display=swap");
+
 .forecast-summary {
   padding: 10px 16px;
   text-align: center;
@@ -16,6 +18,7 @@
 .forecast-summary__date {
   margin: 0.5rem;
   font-size: 1.5rem;
+  font-family: "Poppins", sans-serif;
 }
 
 .forecast-summary__temperature {
